--- a/index.html
+++ b/index.html
@@ -97,11 +97,8 @@
             <div class="col-sm-10 col-12 header-section">
               <h1 class="header-title"><strong>Make your <span>beehive</span> smart!</strong></h1>
               <div class="col-md-8 p-1 header-subtitle">
-                <p class="col-12">Monitor and track key metrics in a real time.</p>
+                <p class="col-12">Monitor and collect beehive key metrics by adding “Smart Frame”.</p>
               </div>
-              <button type="button" class="btn btn-warning preorder-button" data-toggle="modal" data-target="#exampleModal">
-                  PREORDER NOW
-              </button>
             </div>
           </div>
         </div>
@@ -111,11 +108,8 @@
       <div class="col-12 header-title-mobile">
         <h1><strong>Make your beehive smart!</strong></h1>
         <div class="col-12 p-1">
-          <p class="col-12" class="header-subtitle-mobile">Monitor and track key metrics in a real time.</p>
+          <p class="col-12" class="header-subtitle-mobile">Monitor and collect beehive key metrics by adding “Smart Frame”.</p>
         </div>
-        <button type="button" class="btn btn-warning preorder-button" data-toggle="modal" data-target="#exampleModal">
-            PREORDER NOW
-        </button>
       </div>
     </div>
     <div class="home-container">
@@ -123,16 +117,14 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-sm-12 col-12">
-              <h2 class="tac">Challenge</h2>
+              <h2 class="tac">Why</h2>
               <br />
 			  <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
 			  <br />
               <ul class="list-container">
-                <li>Bees are dying rapidly,</li>
-                <li>Traditional beekeeping has no practice of collecting data for further analysis or future use,</li>
-                <li>Estimated 50 million active beehives in the world (90% are Longhorn model),</li>
-                <li>Community with minimal knowledge transfer and experience shearing,</li>
-                <li>How to transition from traditional beekeeping into data driven methodologies.</li>
+                <li><span class="list-number">1.</span>Bees are dying rapidly,</li>
+                <li><span class="list-number">2.</span>Traditional beekeeping have no practice of collecting data for further analysis,</li>
+                <li><span class="list-number">3.</span>Insufficient knowledge exchange and experience sharing among the beekeeping community.</li>
               </ul>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
@@ -141,17 +133,17 @@
 			  <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
 			  <br />
               <ul class="list-container">
-                <li>Habeetat “Smart Frame“ is adjustable hardware component designed for Longhorn beehives, embedded with sensors that collect, store and transfer data to web and mobile application in real time,</li>
-				<li>Uniquely implemented solution that measure all key data points:
+                <li><span class="list-number">1.</span>Habeetat “Smart Frame“ is designed for Longhorn beehive model, equipped with sensors that measure, store and transfers collected data,</li>
+				<li><span class="list-number">2.</span>Data is visually presented through online applications (web and mobile) and provide readings and graphs for following metrics:
 					<ul>
-						<li>Beehive single frame weight (no other solution can do),</li>
-						<li>Beehive collective weight (sum of all frames weight values),</li>
-						<li>Inside/outside temperature,</li>
-						<li>Inside/outside humidity.</li>
+						<li><span class="list-letter">a. </span>Beehive single frame weight (no other solution can do),</li>
+						<li><span class="list-letter">b. </span>Beehive collective weight (sum of all frames weight values),</li>
+						<li><span class="list-letter">c. </span>Inside/outside temperature,</li>
+						<li><span class="list-letter">d. </span>Inside/outside humidity.</li>
 					</ul>
 				</li>
-				<li>“Smart Frame“ is specifically designed not to be harmful or impactful in any way to bee colonies (true eco product),</li>
-				<li>Solution has been tested and proven in real life conditions in collaboration with professional beekeepers.</li>
+				<li><span class="list-number">3.</span>“Smart Frame“  - True eco product,  proven not to be harmful or impactful in any way to bee colonies,</li>
+				<li><span class="list-number">4.</span>Tested in real life conditions in collaboration with professional beekeepers.</li>
               </ul>
             </div>
             <br />
@@ -162,21 +154,20 @@
               <img class="img-fluid cih aboutus-img" alt='honeycomb' src='./images/sec2-3.png' />
               <br />
               <ul class="list-container">
-                <li>Real time data monitoring enables beekeepers to optimize their day-2-day operations, making the entire process far more efficient,</li>
-				<li>With “early-warning” notifications, beekeepers can:
+                <li><span class="list-number">1.</span>Real-time data monitoring that enables beekeepers to optimize their day-2-day operations,</li>
+				<li><span class="list-number">2.</span>With help of “Early-warning” notifications beekeepers are able to:
 					<ul>
-						<li>Decrease costs of operation,</li>
-						<li>Reduce colony loses,</li>
-						<li>Detect bee diseases,</li>
-						<li>Improve well-being of bee population,</li>
-						<li>Reduces the honey losses and waste.</li>
+						<li><span class="list-letter">a. </span>Decrease costs of operation,</li>
+						<li><span class="list-letter">b. </span>Reduce colony loses,</li>
+						<li><span class="list-letter">c. </span>Detect bee diseases,</li>
+						<li><span class="list-letter">d. </span>Improve well-being of bee population,</li>
+						<li><span class="list-letter">e. </span>Reduces the honey losses and waste.</li>
 					</ul>
 				</li>
-				<li>Promoting beekeeping as more accessible to the general population by introducing “simple to use” app driven methodologies,</li>
-				<li>Key data is analyzed and visually presented,</li>
-				<li>Small switching costs, solution works as add on to existing set up,</li>
-				<li>Prediction modeling based on big data analysis on platform level,</li>
-				<li>Beekeepers social community interactions and knowledge exchange.</li>
+				<li><span class="list-number">3.</span>Transforms beekeeping to “simple to use” app-driven methodology,</li>
+				<li><span class="list-number">4.</span>Collected data is stored and further analyzed based on big data analysis and prediction modeling,</li>
+				<li><span class="list-number">5.</span>Small switching costs for existing beekeepers with Longhorn beehives,</li>
+				<li><span class="list-number">6.</span>Facilitates beekeepers community interactions and knowledge exchange,</li>
 				</ul>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
@@ -185,7 +176,7 @@
               <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
               <br />
               <ul class="list-container">
-                <li>Regardless if you proven beekeeper or just starting, habeetat is an open online community that helps you to connect with other beekeepers, interact and exchange experiences and best practices.</li>
+                <li class="margin-top">Habeetat core mission is to enable more efficient honey production and improve bees  well-being. Envisioned as the first digital social platform for beekeepers, enabling real-time monitoring and data-driven analysis and notifications.</li>
 			  </ul>
             </div>
           </div>
@@ -213,54 +204,40 @@
         <div class="container">
           <div class="row">
 			  <div class="col-12">
-					<h1 class="tac mb-5" style="color: #333">ha<span style="color:#ffc107">bee</span>tat “Smart Frame“</h1>
+					<h1 class="tac mb-5" style="color: #333">Ha<span style="color:#ffc107">bee</span>tat “Smart Frame“</h1>
 			  </div>
-            <div class="col-md-12 col-lg-9 col-12">
+            <div class="col-md-12 col-lg-12 col-12">
               <img class="img-fluid device" alt='device' src='./images/habeetat-device-new.jpg' />
             </div>
-            <div class="col-md-12 col-lg-3">
+            <div class="col-md-12 col-lg-12">
 				<div class="align-baseline">
 					<p style="text-align: justify">
-						Up to now, primary way of producing honey relied heavily on the experience 
-						and “gut feeling” of the individual beekeepers, utilizing traditional agricultural methods of placing 
-						the hives at a locations that are believed to be most suitable. Additionally, 
-						data collected is rarely recorded for future use and analysis.
+						Up to now, producing honey primary relied on the experience and “gut feeling” of the individual beekeepers. Data observed through operation was rarely recorded for future use and analysis. Habeetat aims to change that by creating the first data-driven social platform for the world’s beekeepers and making beekeeping accessible to the wider audience and demographics, especially targeting younger generations.
 					</p>
-					<div>
-						<img class="img-fluid bee-img johnCena" alt='bee' src='./images/homebee.png' />
-					</div>
 				</div>
 			</div>
-			<div class="col-12">
-			  <p  style="text-align: justify">
-					HaBEEtat aims to change that. It’s core mission is to enable more efficient honey production and 
-					improve the well-being of bees, by creating first integrated online platform for beekeepers, 
-					enabling real time monitoring and data driven analysis and prediction modeling. With a such 
-					approach, beekeeping will become more accessible to wider audience and demographics, in particular 
-					younger generations, reigniting their interest for beekeeping. Habeetat mission is to create the 
-					first data driven social platform for world’s beekeepers.</p>
-              <br />
-              <!-- <button class="btn btn-warning">OPEN GALLERY</button> -->
-            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="container-fluid section-three" style="max-width: 1200px;">
       <div class="row">
-        <div class="col-3">
-          <img class="img-fluid bee-img " alt='bee' src='./images/homebee.png' />
+        <div class="col-2">
+          <!-- <img class="img-fluid bee-img " alt='bee' src='./images/homebee.png' /> -->
         </div>
-        <div class="col-3">
+        <div class="col-2">
           <!-- <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' /> -->
         </div>
-        <div class="col-3 offset-3">
-          <!-- <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' /> -->
+        <div class="col-2">
+          <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' />
         </div>
       </div>
       <br />
       <br />
-      <br />
+	  <br />
+	  <div class="tac subtitle-text">
+		Just place “Smart Frame” on top of your beehive and turn it ON. Is that simple!
+	</div>
     </div>
     <div class="container-fluid" style="max-width: 1200px;">
       <div class="row">
@@ -270,8 +247,7 @@
       </div>
     </div>
     <div class="container-fluid section-six">
-      <h2 class='tac'>Tracking data is much easier!</h2>
-      <p class='tac'>Imagine monitoring your bees from the comfort of your home or office.</p>
+      <h2 class='tac'>All key data is collected, stored and presented through the graphical interface.</h2>
       <div class="row">
         <div class="col-12 img-lg p-0">
           <img class="img-fluid tracking-img" alt='step by step app' src='./images/bg_tracking_1.png' />
@@ -323,7 +299,7 @@
       <div class="container-fluid section-eigth">
         <br />
         <br />
-        <h4>We are now taking preorders for 2019 ha<span style="color:#ffc107">bee</span>tat Hives</h4>
+        <h4>We are in the process of taking preorders for “Smart Frame”. Expected delivery date - Spring 2020.</h4>
         <br />
         <br />
         <button type="button" class="btn btn-warning preorder-button" data-toggle="modal" data-target="#exampleModal">
@@ -352,9 +328,6 @@
           <a class="aboutus-link">About Us</a>
           <a class="product-link">Product</a>
           <a class="apps-link">Apps</a>
-          <button type="button" class="btn btn-warning preorder-button" data-toggle="modal" data-target="#exampleModal">
-              PREORDER NOW
-          </button>
         </div>
         <br />
         <br />
