add scroll to top, fix scroll to product, do some additional text changes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 
 <body>
+  	<div class="scrolltop-wrap">
+      <img src="images/arrow.png" class="scrolltop">
+    </div>
     <script>
       function preorder(e){
         e && e.preventDefault();
@@ -128,11 +131,6 @@
                     PREORDER NOW
                 </button>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link aboutus-link" data-toggle="collapse" data-target=".navbar-collapse.show">About us
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
             <li class="nav-item">
               <a class="nav-link product-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Product</a>
             </li>
@@ -153,7 +151,7 @@
             <div class="col-sm-10 col-12 header-section">
               <h1 class="header-title"><strong>Make your <span>beehive</span> smart!</strong></h1>
               <div class="col-md-8 p-1 header-subtitle">
-                <p class="col-12">Monitor and collect beehive key metrics by adding “Smart Frame”.</p>
+                <p class="col-12">Monitor and track beehive key metrics by adding “Smart Frame”.</p>
               </div>
             </div>
           </div>
@@ -164,7 +162,7 @@
       <div class="col-12 header-title-mobile">
         <h1><strong>Make your beehive smart!</strong></h1>
         <div class="col-12 p-1">
-          <p class="col-12" class="header-subtitle-mobile">Monitor and collect beehive key metrics by adding “Smart Frame”.</p>
+          <p class="col-12" class="header-subtitle-mobile">Monitor and track beehive key metrics by adding “Smart Frame”.</p>
         </div>
       </div>
     </div>
@@ -180,7 +178,7 @@
               <ul class="list-container">
                 <li><span class="list-number">1.</span>Bees are dying rapidly,</li>
                 <li><span class="list-number">2.</span>Traditional beekeeping have no practice of collecting data for further analysis,</li>
-                <li><span class="list-number">3.</span>Insufficient knowledge exchange and experience sharing among the beekeeping community.</li>
+                <li><span class="list-number">3.</span>Insufficient knowledge sharing and experience exchange among the beekeeping community.</li>
               </ul>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
@@ -189,8 +187,8 @@
 			  <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
 			  <br />
               <ul class="list-container">
-                <li><span class="list-number">1.</span>Habeetat “Smart Frame“ is designed for Longhorn beehive model, equipped with sensors that measure, store and transfers collected data,</li>
-				<li><span class="list-number">2.</span>Data is visually presented through online applications (web and mobile) and provide readings and graphs for following metrics:
+                <li><span class="list-number">1.</span>Habeetat “Smart Frame“ is designed for Longhorn beehive, equipped with sensors that measure, store and transfers collected data,</li>
+				<li><span class="list-number">2.</span>Data is visually presented through online applications (web and mobile) and provide readings for following metrics:
 					<ul>
 						<li><span class="list-letter">a. </span>Beehive single frame weight (no other solution can do),</li>
 						<li><span class="list-letter">b. </span>Beehive collective weight (sum of all frames weight values),</li>
@@ -198,7 +196,7 @@
 						<li><span class="list-letter">d. </span>Inside/outside humidity.</li>
 					</ul>
 				</li>
-				<li><span class="list-number">3.</span>“Smart Frame“  - True eco product,  proven not to be harmful or impactful in any way to bee colonies,</li>
+				<li><span class="list-number">3.</span>“Smart Frame“ is true eco product, proven not to be harmful or impactful in any way to bee colonies,</li>
 				<li><span class="list-number">4.</span>Tested in real life conditions in collaboration with professional beekeepers.</li>
               </ul>
             </div>
@@ -211,17 +209,16 @@
               <br />
               <ul class="list-container">
                 <li><span class="list-number">1.</span>Real-time data monitoring that enables beekeepers to optimize their day-2-day operations,</li>
-				<li><span class="list-number">2.</span>With help of “Early-warning” notifications beekeepers are able to:
+				<li><span class="list-number">2.</span>With help of “early-warning” notifications beekeeper is able to:
 					<ul>
 						<li><span class="list-letter">a. </span>Decrease costs of operation,</li>
 						<li><span class="list-letter">b. </span>Reduce colony loses,</li>
 						<li><span class="list-letter">c. </span>Detect bee diseases,</li>
-						<li><span class="list-letter">d. </span>Improve well-being of bee population,</li>
-						<li><span class="list-letter">e. </span>Reduces the honey losses and waste.</li>
+						<li><span class="list-letter">d. </span>Reduces the honey losses and waste.</li>
 					</ul>
 				</li>
 				<li><span class="list-number">3.</span>Transforms beekeeping to “simple to use” app-driven methodology,</li>
-				<li><span class="list-number">4.</span>Collected data is stored and further analyzed based on big data analysis and prediction modeling,</li>
+				<li><span class="list-number">4.</span>Collected data is stored and further analyzed enabling big data analysis and prediction modeling,</li>
 				<li><span class="list-number">5.</span>Small switching costs for existing beekeepers with Longhorn beehives,</li>
 				<li><span class="list-number">6.</span>Facilitates beekeepers community interactions and knowledge exchange,</li>
 				</ul>
@@ -232,8 +229,12 @@
               <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
               <br />
               <ul class="list-container">
-                <li class="margin-top">Habeetat core mission is to enable more efficient honey production and improve bees  well-being. Envisioned as the first digital social platform for beekeepers, enabling real-time monitoring and data-driven analysis and notifications.</li>
-			  </ul>
+                <li class="mission-wrap">
+                  <div class="enlarge">"</div>
+                  Habeetat core mission is to provide more efficiencies during process of honey production and improvement of bees well-being. Envisioned as the first digital social platform for beekeepers, enabling real-time monitoring, data-driven analysis and personalized notifications.
+                  <div class="enlarge" id="bottom-part">"</div>
+                </li>
+			        </ul>
             </div>
           </div>
         </div>
@@ -267,8 +268,8 @@
             </div>
             <div class="col-md-12 col-lg-12">
 				<div class="align-baseline">
-					<p style="text-align: justify">
-						Up to now, producing honey primary relied on the experience and “gut feeling” of the individual beekeepers. Data observed through operation was rarely recorded for future use and analysis. Habeetat aims to change that by creating the first data-driven social platform for the world’s beekeepers and making beekeeping accessible to the wider audience and demographics, especially targeting younger generations.
+					<p style="text-align: justify; font-size: 16px; line-height: 32px">
+						Up to now, producing honey primary relied on the experience and “gut feeling” of the individual beekeepers. Data observed through operation was rarely recorded for future use and analysis. Habeetat aims to change that by creating the first data-driven social platform for the world’s beekeepers and making beekeeping accessible to the wider audience and demographics.
 					</p>
 				</div>
 			</div>
@@ -290,10 +291,14 @@
       </div>
       <br />
       <br />
-	  <br />
+    <div class="tac subtitle-text">
+        Imagine monitoring your beehive from the comfort of you home or office.
+      </div>
+      <div class="center">-----</div>
 	  <div class="tac subtitle-text">
-		Just place “Smart Frame” on top of your beehive and turn it ON. Is that simple!
-	</div>
+		Set <span>“Smart Frame”</span> on top of your beehive and turn it ON. It's that simple!
+  </div>
+  <br />
     </div>
     <div class="container-fluid" style="max-width: 1200px;">
       <div class="row">
@@ -303,7 +308,7 @@
       </div>
     </div>
     <div class="container-fluid section-six">
-      <h2 class='tac'>All key data is collected, stored and presented through the graphical interface.</h2>
+      <h4 class='tac margin-bottom'>All key data is collected, stored and presented through the web and mobile interface.</h4>
       <div class="row">
         <div class="col-12 img-lg p-0">
           <img class="img-fluid tracking-img" alt='step by step app' src='./images/bg_tracking_1.png' />
@@ -347,7 +352,8 @@
           <br />
           <br />
           <h5 class='col-12 tac'>Available on Web too.</h5>
-          <br />
+		  <br />
+		  <br />
         </div>
       </div>
     </div>
@@ -355,7 +361,7 @@
       <div class="container-fluid section-eigth">
         <br />
         <br />
-        <h4>We are in the process of taking preorders for “Smart Frame”. Expected delivery date - Spring 2020.</h4>
+        <h4>Habeetat is in the process of taking preorders for “Smart Frame”. Expected delivery date - Fall 2019.</h4>
         <br />
         <br />
         <button type="button" class="btn btn-warning preorder-button" data-toggle="modal" data-target="#exampleModal">
@@ -381,7 +387,6 @@
         </div>
         <div class='col-12 col-lg-4 offset-lg-3 footer-links' style='display: flex; justify-content: space-between'>
           <a class="aboutus-link">Home</a>
-          <a class="aboutus-link">About Us</a>
           <a class="product-link">Product</a>
           <a class="apps-link">Apps</a>
         </div>
@@ -408,7 +413,7 @@
     });
     $(".product-link").click(function () {
       $([document.documentElement, document.body]).animate({
-        scrollTop: $("#product").offset().top
+        scrollTop: $("#product").offset().top - 120
       }, 1000);
     });
     $(".preorder-link").click(function () {
@@ -416,6 +421,19 @@
         scrollTop: $("#preorder").offset().top
       }, 1000);
     });
+	$(".scrolltop-wrap").click(function () {
+      $([document.documentElement, document.body]).animate({
+        scrollTop: $(".Home").offset().top
+      }, 1000);
+    });
+
+	$(window).scroll(function() {
+		if ($(this).scrollTop() < 800 ) {
+			$('.scrolltop-wrap').css("transform", "scale(0)")
+		} else {
+			$('.scrolltop-wrap').css("transform", "scale(1)")
+		}
+	})
   });
 
 </script>
