--- a/index.html
+++ b/index.html
@@ -171,70 +171,76 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-sm-12 col-12">
-              <h2 class="tac">Why</h2>
-              <br />
-			  <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
-			  <br />
-              <ul class="list-container">
-                <li><span class="list-number">1.</span>Bees are dying rapidly,</li>
-                <li><span class="list-number">2.</span>Traditional beekeeping have no practice of collecting data for further analysis,</li>
-                <li><span class="list-number">3.</span>Insufficient knowledge sharing and experience exchange among the beekeeping community.</li>
-              </ul>
+              <div class="section-bg">
+                <h2 class="tac">Why</h2>
+                <br />
+                <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
+                <br />
+                <ul class="list-container">
+                  <li><span class="list-number">1.</span>Bees are dying rapidly,</li>
+                  <li><span class="list-number">2.</span>Traditional beekeeping have no practice of collecting data for further analysis,</li>
+                  <li><span class="list-number">3.</span>Insufficient knowledge sharing and experience exchange among the beekeeping community.</li>
+                </ul>
+              </div>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
               <h2 class="tac">Solution</h2>
               <br />
-			  <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
-			  <br />
+              <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
+              <br />
               <ul class="list-container">
                 <li><span class="list-number">1.</span>Habeetat “Smart Frame“ is designed for Longhorn beehive, equipped with sensors that measure, store and transfers collected data,</li>
-				<li><span class="list-number">2.</span>Data is visually presented through online applications (web and mobile) and provide readings for following metrics:
-					<ul>
-						<li><span class="list-letter">a. </span>Beehive single frame weight (no other solution can do),</li>
-						<li><span class="list-letter">b. </span>Beehive collective weight (sum of all frames weight values),</li>
-						<li><span class="list-letter">c. </span>Inside/outside temperature,</li>
-						<li><span class="list-letter">d. </span>Inside/outside humidity.</li>
-					</ul>
-				</li>
-				<li><span class="list-number">3.</span>“Smart Frame“ is true eco product, proven not to be harmful or impactful in any way to bee colonies,</li>
-				<li><span class="list-number">4.</span>Tested in real life conditions in collaboration with professional beekeepers.</li>
+                <li><span class="list-number">2.</span>Data is visually presented through online applications (web and mobile) and provide readings for following metrics:
+                  <ul>
+                    <li><span class="list-letter">a. </span>Beehive single frame weight (no other solution can do),</li>
+                    <li><span class="list-letter">b. </span>Beehive collective weight (sum of all frames weight values),</li>
+                    <li><span class="list-letter">c. </span>Inside/outside temperature,</li>
+                    <li><span class="list-letter">d. </span>Inside/outside humidity.</li>
+                  </ul>
+                </li>
+                <li><span class="list-number">3.</span>“Smart Frame“ is true eco product, proven not to be harmful or impactful in any way to bee colonies,</li>
+                <li><span class="list-number">4.</span>Tested in real life conditions in collaboration with professional beekeepers.</li>
               </ul>
             </div>
             <br />
             <br />
             <div class="col-md-6 col-sm-12 col-12">
-              <h2 class="tac spread">Benefits</h2>
-              <br />
-              <img class="img-fluid cih aboutus-img" alt='honeycomb' src='./images/sec2-3.png' />
-              <br />
-              <ul class="list-container">
-                <li><span class="list-number">1.</span>Real-time data monitoring that enables beekeepers to optimize their day-2-day operations,</li>
-				<li><span class="list-number">2.</span>With help of “early-warning” notifications beekeeper is able to:
-					<ul>
-						<li><span class="list-letter">a. </span>Decrease costs of operation,</li>
-						<li><span class="list-letter">b. </span>Reduce colony loses,</li>
-						<li><span class="list-letter">c. </span>Detect bee diseases,</li>
-						<li><span class="list-letter">d. </span>Reduces the honey losses and waste.</li>
-					</ul>
-				</li>
-				<li><span class="list-number">3.</span>Transforms beekeeping to “simple to use” app-driven methodology,</li>
-				<li><span class="list-number">4.</span>Collected data is stored and further analyzed enabling big data analysis and prediction modeling,</li>
-				<li><span class="list-number">5.</span>Small switching costs for existing beekeepers with Longhorn beehives,</li>
-				<li><span class="list-number">6.</span>Facilitates beekeepers community interactions and knowledge exchange,</li>
-				</ul>
+              <div class="section-bg-mobile">
+                <h2 class="tac spread">Benefits</h2>
+                <br />
+                <img class="img-fluid cih aboutus-img" alt='honeycomb' src='./images/sec2-3.png' />
+                <br />
+                <ul class="list-container">
+                  <li><span class="list-number">1.</span>Real-time data monitoring that enables beekeepers to optimize their day-2-day operations,</li>
+                  <li><span class="list-number">2.</span>With help of “early-warning” notifications beekeeper is able to:
+                    <ul>
+                      <li><span class="list-letter">a. </span>Decrease costs of operation,</li>
+                      <li><span class="list-letter">b. </span>Reduce colony loses,</li>
+                      <li><span class="list-letter">c. </span>Detect bee diseases,</li>
+                      <li><span class="list-letter">d. </span>Reduces the honey losses and waste.</li>
+                    </ul>
+                  </li>
+                  <li><span class="list-number">3.</span>Transforms beekeeping to “simple to use” app-driven methodology,</li>
+                  <li><span class="list-number">4.</span>Collected data is stored and further analyzed enabling big data analysis and prediction modeling,</li>
+                  <li><span class="list-number">5.</span>Small switching costs for existing beekeepers with Longhorn beehives,</li>
+                  <li><span class="list-number">6.</span>Facilitates beekeepers community interactions and knowledge exchange,</li>
+                </ul>
+              </div>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
-              <h2 class="tac spread">Mission</h2>
-              <br />
-              <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
-              <br />
-              <ul class="list-container">
-                <li class="mission-wrap">
-                  <div class="enlarge">"</div>
-                  Habeetat core mission is to provide more efficiencies during process of honey production and improvement of bees well-being. Envisioned as the first digital social platform for beekeepers, enabling real-time monitoring, data-driven analysis and personalized notifications.
-                  <div class="enlarge" id="bottom-part">"</div>
-                </li>
-			        </ul>
+              <div class="section-bg-web">
+                <h2 class="tac spread">Mission</h2>
+                <br />
+                <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
+                <br />
+                <ul class="list-container">
+                  <li class="mission-wrap">
+                    <div class="enlarge">"</div>
+                    Habeetat core mission is to provide more efficiencies during process of honey production and improvement of bees well-being. Envisioned as the first digital social platform for beekeepers, enabling real-time monitoring, data-driven analysis and personalized notifications.
+                    <div class="enlarge" id="bottom-part">"</div>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -361,7 +367,7 @@
       <div class="container-fluid section-eigth">
         <br />
         <br />
-        <h4>Habeetat is in the process of taking preorders for “Smart Frame”. Expected delivery date - Fall 2019.</h4>
+        <h4><strong>Habeetat is in the process of taking preorders for “Smart Frame”. Expected delivery date - Fall 2019.</strong></h4>
         <br />
         <br />
         <button type="button" class="btn btn-warning preorder-button" data-toggle="modal" data-target="#exampleModal">
