do text changes

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               <br />
               <ul class="list-container">
                 <li><span class="list-number">1.</span>Habeetat “Smart Frame“ is designed for Longhorn beehive, equipped with sensors that measure, store and transfers collected data,</li>
-                <li><span class="list-number">2.</span>Data is visually presented through online applications (web and mobile) and provide readings for following metrics:
+                <li><span class="list-number">2.</span>Data readings are visually presented through online applications (web and mobile) for following metrics:
                   <ul>
                     <li><span class="list-letter">a. </span>Beehive single frame weight (no other solution can do),</li>
                     <li><span class="list-letter">b. </span>Beehive collective weight (sum of all frames weight values),</li>
@@ -212,7 +212,7 @@
                 <br />
                 <ul class="list-container">
                   <li><span class="list-number">1.</span>Real-time data monitoring that enables beekeepers to optimize their day-2-day operations,</li>
-                  <li><span class="list-number">2.</span>With help of “early-warning” notifications beekeeper is able to:
+                  <li><span class="list-number">2.</span>With “early-warning” notifications beekeeper is able to:
                     <ul>
                       <li><span class="list-letter">a. </span>Decrease costs of operation,</li>
                       <li><span class="list-letter">b. </span>Reduce colony loses,</li>
@@ -236,7 +236,9 @@
                 <ul class="list-container">
                   <li class="mission-wrap">
                     <div class="enlarge">"</div>
-                    Habeetat core mission is to provide more efficiencies during process of honey production and improvement of bees well-being. Envisioned as the first digital social platform for beekeepers, enabling real-time monitoring, data-driven analysis and personalized notifications.
+                    Habeetat core mission is to enable data driven process of honey production resulting in improvement of bees well-being. 
+                    Envisioned as the first digital social platfrom for beekeepers, enabling real-time monitoring, 
+                    data-driven analysis and personalized notifications.
                     <div class="enlarge" id="bottom-part">"</div>
                   </li>
                 </ul>
