--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
               <br />
               <ul class="list-container">
-                <li><span class="list-number">1.</span>Habeetat “Smart Frame“ is designed for Longhorn beehive, equipped with sensors that measure, store and transfers collected data,</li>
+                <li><span class="list-number">1.</span>Habeetat “Smart Frame“ is designed for Langstroth beehive, equipped with sensors that measure, store and transfers collected data,</li>
                 <li><span class="list-number">2.</span>Data readings are visually presented through online applications (web and mobile) for following metrics:
                   <ul>
                     <li><span class="list-letter">a. </span>Beehive single frame weight (no other solution can do),</li>
@@ -222,7 +222,7 @@
                   </li>
                   <li><span class="list-number">3.</span>Transforms beekeeping to “simple to use” app-driven methodology,</li>
                   <li><span class="list-number">4.</span>Collected data is stored and further analyzed enabling big data analysis and prediction modeling,</li>
-                  <li><span class="list-number">5.</span>Small switching costs for existing beekeepers with Longhorn beehives,</li>
+                  <li><span class="list-number">5.</span>Small switching costs for existing beekeepers with Langstroth beehives,</li>
                   <li><span class="list-number">6.</span>Facilitates beekeepers community interactions and knowledge exchange,</li>
                 </ul>
               </div>
