--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="col-12 header-title-mobile">
         <h1><strong>Make your beehive smart!</strong></h1>
         <div class="col-12 p-1">
-          <p class="col-12" class="header-subtitle-mobile">Monitor and track beehive key metrics by adding “Smart Frame”.</p>
+          <p class="col-12" class="header-subtitle-mobile">Monitor your beehive from the comfort of your home by adding “Smart BEE Frame”.</p>
         </div>
       </div>
     </div>
@@ -172,7 +172,7 @@
           <div class="row">
             <div class="col-md-6 col-sm-12 col-12">
               <div class="section-bg">
-                <h2 class="tac">Why</h2>
+                <h2 class="tac">WHY</h2>
                 <br />
                 <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
                 <br />
@@ -184,61 +184,57 @@
               </div>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
-              <h2 class="tac">Solution</h2>
+              <h2 class="tac">SOLUTION</h2>
               <br />
               <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
               <br />
               <ul class="list-container">
-                <li><span class="list-number">1.</span>Habeetat “Smart Frame“ is designed for Langstroth beehive, equipped with sensors that measure, store and transfers collected data,</li>
-                <li><span class="list-number">2.</span>Data readings are visually presented through online applications (web and mobile) for following metrics:
+                <li><span class="list-number">1.</span>Habeetat “BEE Frame“ is designed for Langstroth beehive, equipped with data sensors that measure, store and transfer collected data </li>
+                <li><span class="list-number">2.</span>Data readings are measured and presented (web and mobile) for following metrics:
                   <ul>
-                    <li><span class="list-letter">a. </span>Beehive single frame weight (no other solution can do),</li>
-                    <li><span class="list-letter">b. </span>Beehive collective weight (sum of all frames weight values),</li>
+                    <li><span class="list-letter">a. </span>Beehive single frame weight,</li>
+                    <li><span class="list-letter">b. </span>Beehive collective weight (total sum of all frames weight),</li>
                     <li><span class="list-letter">c. </span>Inside/outside temperature,</li>
                     <li><span class="list-letter">d. </span>Inside/outside humidity.</li>
                   </ul>
                 </li>
-                <li><span class="list-number">3.</span>“Smart Frame“ is true eco product, proven not to be harmful or impactful in any way to bee colonies,</li>
-                <li><span class="list-number">4.</span>Tested in real life conditions in collaboration with professional beekeepers.</li>
+                <li><span class="list-number">3.</span>"BEE Frame“ is an eco product, proven not to be harmful or impactful in any way to bee colonies</li>
+                <li><span class="list-number">4.</span>Tested in real-life conditions in collaboration with professional beekeepers</li>
               </ul>
             </div>
             <br />
             <br />
             <div class="col-md-6 col-sm-12 col-12">
               <div class="section-bg-mobile">
-                <h2 class="tac spread">Benefits</h2>
+                <h2 class="tac spread">BENEFITS</h2>
                 <br />
                 <img class="img-fluid cih aboutus-img" alt='honeycomb' src='./images/sec2-3.png' />
                 <br />
                 <ul class="list-container">
-                  <li><span class="list-number">1.</span>Real-time data monitoring that enables beekeepers to optimize their day-2-day operations,</li>
-                  <li><span class="list-number">2.</span>With “early-warning” notifications beekeeper is able to:
+                  <li><span class="list-number">1.</span>Real-time data monitoring  and “early-warning” notifications enables:
                     <ul>
-                      <li><span class="list-letter">a. </span>Decrease costs of operation,</li>
-                      <li><span class="list-letter">b. </span>Reduce colony loses,</li>
-                      <li><span class="list-letter">c. </span>Detect bee diseases,</li>
-                      <li><span class="list-letter">d. </span>Reduces the honey losses and waste.</li>
+                      <li><span class="list-letter">a. </span>operation optimisation</li>
+                      <li><span class="list-letter">b. </span>reduction of colony loses</li>
+                      <li><span class="list-letter">c. </span>detection of bee diseases</li>
                     </ul>
                   </li>
-                  <li><span class="list-number">3.</span>Transforms beekeeping to “simple to use” app-driven methodology,</li>
-                  <li><span class="list-number">4.</span>Collected data is stored and further analyzed enabling big data analysis and prediction modeling,</li>
-                  <li><span class="list-number">5.</span>Small switching costs for existing beekeepers with Langstroth beehives,</li>
-                  <li><span class="list-number">6.</span>Facilitates beekeepers community interactions and knowledge exchange,</li>
+                  <li><span class="list-number">2.</span>Transforms beekeeping to “simple to use” app-driven methodology,</li>
+                  <li><span class="list-number">2.</span>Collected data is stored and further analyzed enabling big data analysis and prediction modeling,</li>
+                  <li><span class="list-number">4.</span>Small switching costs for existing beekeepers with Langstroth beehives,</li>
+                  <li><span class="list-number">5.</span>Facilitates beekeepers community interactions and knowledge exchange,</li>
                 </ul>
               </div>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
               <div class="section-bg-web">
-                <h2 class="tac spread">Mission</h2>
+                <h2 class="tac spread">MISSION</h2>
                 <br />
                 <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
                 <br />
                 <ul class="list-container">
                   <li class="mission-wrap">
                     <div class="enlarge">"</div>
-                    Habeetat core mission is to enable data driven process of honey production resulting in improvement of bees well-being. 
-                    Envisioned as the first digital social platfrom for beekeepers, enabling real-time monitoring, 
-                    data-driven analysis and personalized notifications.
+                    Habeetat core mission is to optimize the honey production process and to improve the bee's well-being.
                     <div class="enlarge" id="bottom-part">"</div>
                   </li>
                 </ul>
@@ -277,7 +273,7 @@
             <div class="col-md-12 col-lg-12">
 				<div class="align-baseline">
 					<p style="text-align: justify; font-size: 16px; line-height: 32px">
-						Up to now, producing honey primary relied on the experience and “gut feeling” of the individual beekeepers. Data observed through operation was rarely recorded for future use and analysis. Habeetat aims to change that by creating the first data-driven social platform for the world’s beekeepers and making beekeeping accessible to the wider audience and demographics.
+            Producing honey primarily depends on the experience and “gut feeling” of the individual beekeepers. Data observed through operation was rarely recorded and analyzed. Habeetat aims to change that by creating the first data-driven platform for the world’s beekeepers, making beekeeping accessible to a wider audience.
 					</p>
 				</div>
 			</div>
