--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="col-sm-10 col-12 header-section">
               <h1 class="header-title"><strong>Make your <span>beehive</span> smart!</strong></h1>
               <div class="col-md-8 p-1 header-subtitle">
-                <p class="col-12">Monitor and track beehive key metrics by adding “Smart Frame”.</p>
+                <p class="col-12">Monitor your beehive from the comfort of your home by adding “Smart BEE Frame”.</p>
               </div>
             </div>
           </div>
@@ -365,7 +365,7 @@
       <div class="container-fluid section-eigth">
         <br />
         <br />
-        <h4><strong>Habeetat is in the process of taking preorders for “Smart Frame”. Expected delivery date - Fall 2019.</strong></h4>
+        <h4><strong>Habeetat is in the process of taking preorders for “Smart Frame”. Expected delivery date - Fall 2022.</strong></h4>
         <br />
         <br />
         <button type="button" class="btn btn-warning preorder-button" data-toggle="modal" data-target="#exampleModal">
