--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       <div class="container-fluid section-eigth">
         <br />
         <br />
-        <h4><strong>Habeetat is in the process of taking preorders for “Smart Frame”. Expected delivery date - Fall 2022.</strong></h4>
+        <h4><strong>Habeetat is in the process of taking preorders for “Smart Frame”. Expected delivery date - Spring 2022.</strong></h4>
         <br />
         <br />
         <button type="button" class="btn btn-warning preorder-button" data-toggle="modal" data-target="#exampleModal">
